# Xi-cam.Acquire

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
xicam/Acquire/: Acquire.yapsy-plugin  __init__.py  plan_tools.py  runengine.py
xicam/Acquire/controllers/: andor_controller.py  areadetector.py  areadetector.yapsy-plugin  diodecontroller.py  fastccd_controller.py  pimte3_controller.py  psu.py  saxsdetector.py  saxsdetector.yapsy-plugin  typhoscontroller.py
xicam/Acquire/controlwidgets/: BCSConnector.py  __init__.py  beamlinemodel.py  devicelist.py  deviceview.py  motor.py  runenginewidget.py  typhonmotorcontroller.yapsy-plugin  typhoscontroller.py  typhosmotorcontroller.py
xicam/Acquire/datasources/: BlueskyDataResource.py  BlueskyDataResource.yapsy-plugin  OphydDataResource.py  OphydDataResource.yapsy-plugin
xicam/Acquire/devices/: __init__.py  andor.py  areadetector.py  compound.py  device.py  devices.yapsy-plugin  diode.py  fastccd.py  happi.py  lakeshore.py  motor.py  pimte3.py  psu.py
xicam/Acquire/gui/: scan_display.py
xicam/Acquire/patches/: __init__.py  pydm.py  typhos.py
xicam/Acquire/plans/: __init__.py  plan.py  planitem.py  plans.yapsy-plugin
xicam/Acquire/pythontools/: console.py  editor.py  toolswidget.py
xicam/Acquire/ui/: LakeShore336.ui  device_readonly.ui  device_readwrite.ui  plot_widget.ui  scan_display.ui  temp_controller.ui
xicam/Acquire/widgets/: dialogs.py
xicam/plugins/Acquire/: Acquire.yapsy-plugin  __init__.py  controlsprofiles.py  controlsprofiles.yapsy-plugin
xicam/plugins/Acquire/controlwidgets/: devicelist.py  motor.py  motor.ui  simplewidgets.py  typhonmotorcontroller.py  typhonmotorcontroller.yapsy-plugin
xicam/plugins/Acquire/datasources/: OphydDataResource.py
xicam/plugins/Acquire/devices/: __init__.py  devices.yapsy-plugin
xicam/plugins/Acquire/pythontools/: __init__.py  console.py  editor.py  toolswidget.py
